tests/ui/feature-gates/feature-gate-unsized_locals.stderr
error[E0277]: the size for values of type `(dyn FnOnce() + 'static)` cannot be known at compilation time
  --> $DIR/feature-gate-unsized_locals.rs:1:9
   |
LL | fn f(f: dyn FnOnce()) {}
   |         ^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn FnOnce() + 'static)`
   = help: unsized fn params are gated as an unstable feature
help: you can use `impl Trait` as the argument type
   |
LL - fn f(f: dyn FnOnce()) {}
LL + fn f(f: impl FnOnce()) {}
   |
help: function arguments must have a statically known size, borrowed types always have a known size
   |
LL | fn f(f: &dyn FnOnce()) {}
   |         +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
