tests/ui/feature-gates/feature-gate-unsized_locals.rs
fn f(f: dyn FnOnce()) {}
//~^ ERROR E0277

fn main() {
}
